# Django-shadcnUI

./: LICENSE  README.md  copier.yml  pyproject.toml
components/: a.html  accordion.html  badge.html  button.html  card.html  checkbox.html  command.html  command_dialog.html  dropdown_menu.html  input.html  label.html  progress.html  tailwind.config.js  textarea.html  toast.html
components/a/: index.html
components/accordion/: item.html  trigger.html
components/alert_dialog/: cancel.html  content.html  index.html  trigger.html
components/allauth/: account_inactive.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
components/card/: title.html
components/command/: empty.html  input.html  item.html  separator.html
components/cotton/: button.html  card.html  textarea.html
components/dialog/: content.html
components/dropdown_menu/: content.html  item.html  label.html  trigger.html
components/navigation_menu/: content.html  item.html  link.html  link_details.html  trigger.html
components/popover/: content.html
components/select/: content.html
components/sheet/: content.html
components/table/: cell.html  head.html
components/tabs/: content.html  list.html  trigger.html
components/toast/: content.html  trigger.html
docs/: .copier-answers.yml  .dockerignore  .gitignore  docker_startup.sh  fly.toml  manage.py  package-lock.json  package.json  prod.Dockerfile  pyproject.toml
docs/docs/: asgi.py  settings.py  settings_production.py  urls.py  views.py  wsgi.py
docs/templates/: accordion.html  alert.html  alert_dialog.html  allauth.html  badge.html  base.html  button.html  card.html  checkbox.html  combobox.html  command.html  command_dialog.html  dialog.html  dropdown_menu.html  form.html  home.html  input.html  installation.html  introduction.html  (+11 more)
(+54 files in other folders)
